ToDo-Backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: todo-ns
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/IMAGE
          # Startup Probe checks its own endpoint for a response to confirm it's started, blocking other probes until complete. 
          startupProbe:
            httpGet:
              path: /healthz
              port: 3001
            failureThreshold: 30
            periodSeconds: 10
          # Live Probe checks its own endpoint for a response to confirm it's still running after startup
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            failureThreshold: 1
            periodSeconds: 10
          #  readiness Probe checks its own endpoint (which in this case calls the db) for a response to confirm it's ready to accept connections. 
          readinessProbe:
            httpGet:
              path: /dbhealth
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
