ToDo-Backend/manifests/todo-postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todo-backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  serviceName: todo-postgres-svc
  # multiple replicas borked the dataset per request. one having DB info another not. 
  replicas: 1
  selector: 
    matchLabels:
      app: todo-backend
      
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:  
          - name: web
            containerPort: 5432
          volumeMounts:
            - name: todo-postgres-data-storage
              mountPath: /data
      volumes:
        - name: todo-postgres-configmap-volume
          configMap:
            name: todo-postgres-configmap-data
  volumeClaimTemplates:
    - metadata:
        name: todo-postgres-data-storage
      spec: 
        accessModes: ["ReadWriteMany"]
        # storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
